infrastructure/network/vpc.tf
# Creating VPC,name, CIDR and Tags
resource "aws_vpc" "vpc" {
  cidr_block           = "172.16.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  tags = {
    Name = "${var.tag_prefix}-vpc"
  }
}
